--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,12 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+.showme {
+    @apply hidden;
+  }
+  .showhim:hover .showme {
+    @apply block;
+  }
 
